--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'mysql:mysql-connector-java:8.0.25'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
 }
 
 test {
